--- a/index.html
+++ b/index.html
@@ -272,14 +272,14 @@
 									<span class="input-group-text"><i class="fa fa-briefcase"></i></span>
 								</div>
 								<select class="form-control" id="chucvu">
-									<option>Chọn chức vụ</option>
+									<option value="0">Chọn chức vụ</option>
 									<option value="1">Sếp</option>
 									<option value="2">Trưởng phòng</option>
 									<option value="3">Nhân viên</option>
 								</select>
 							</div>
 
-							<p id="error-required-ChucVu" class="text text-danger"></p>
+							<p id="error-option-ChucVu" class="text text-danger"></p>
 						</div>
 						<div class="form-group">
 							<div class="input-group">
